--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -377,6 +377,29 @@ table {
   .height2 {
     font-size: 40px;
   }
+  .btn_contact {
+    border-radius: 10px;
+    font-size: 14px;
+    padding: 15px;
+    background-color: #229958;
+    width: 134px;
+    color: white;
+    border: none;
+}
+.btn_learn {
+  margin-top: 10px;
+  margin-left: 5px;
+  border-radius: 10px;
+  border: 1px solid #229958;
+  font-size: 14px;
+  padding: 15px;
+  background-color: #229958;
+  width: 133px;
+  background-color: transparent;
+  color: white;
+
+
+}
 }
 @media screen and (max-width: 644px) {
   .height {
