--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -81,6 +81,10 @@
   background-color: #229958;
     transition: all 0.8s ease;
 }
+.card3:hover >.casestudies_readmore {
+ color: #00011f;
+
+}
 
 .main_detail_casestudies{
   width:100%;
@@ -147,14 +151,11 @@ border: 1px solid rgb(34, 153, 88);
     height:25vh; 
   }
   .case_container3{
-    background-color:#444545;
- 
+    background-color:#444545; 
     padding: 30px;
      display: flex;
      justify-content: center;    
-     width: 100%;
-     
-     
+     width: 100%;   
      margin: 30px auto;
      /* background-color: red; */
    }
@@ -352,8 +353,7 @@ align-items: center;
           margin: 0 10px;
           font-family: 'roboto';
           text-align: center;
-          border-radius: 22px;
-          
+          border-radius: 22px;         
          }
          .Case_containers{
           background-color:#444545;
@@ -379,8 +379,7 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 270px;
-        
+          height: 270px;       
           width: 100%;
           font-size: 11px;
           background-color: #626363;
